Shortcut is not being show #34862

Closed
opened 2013-04-04 11:41:18 +02:00 by kevin loddewykx · 3 comments

%%%--- Operating System, Graphics card ---
Windows 7 64bit
AMD Radeon HD 6470M

- Blender version with error, and version that worked ---

2.66a
2.66-r55767-win64

- Short description of error ---

When in edit mode: click on "Mesh" in the menu of the 3d view, then "Vertices".
You will see the function "Separate" listed but it has no shortcut next to it. But it can be invoked by pressing P.
So there should be standing one.%%%

%%%--- Operating System, Graphics card --- Windows 7 64bit AMD Radeon HD 6470M - Blender version with error, and version that worked --- 2.66a 2.66-r55767-win64 - Short description of error --- When in edit mode: click on "Mesh" in the menu of the 3d view, then "Vertices". You will see the function "Separate" listed but it has no shortcut next to it. But it can be invoked by pressing P. So there should be standing one.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report. It shows the shortcut in the submenu now. The system here could be smarter but for now it's a reasonable solution while trying to keep the system extensible for scripters.%%%

%%%Fix in svn, thanks for the report. It shows the shortcut in the submenu now. The system here could be smarter but for now it's a reasonable solution while trying to keep the system extensible for scripters.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34862
No description provided.