Fix #34862: some operators like mesh separate or object clear parent were not showing shortcuts in menus, now it shows them in the submenu.